# mincage

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
crates/mincage-cli/: Cargo.toml
crates/mincage-cli/src/: cli.rs  lib.rs  main.rs
crates/mincage-core/: Cargo.toml
crates/mincage-core/src/: cgroup_spec.rs  config.rs  error.rs  lib.rs  mount_plan.rs  namespaces.rs
crates/mincage-runtime/: Cargo.toml
crates/mincage-runtime/src/: backend.rs  container.rs  error.rs  lib.rs  linux_backend.rs
docs/: architecture.md  running.md
docs/adr/: 0001-logic-syscall-separation.md  0002-cgroups-v2-graceful-degradation.md  0003-linux-only-scope.md
scripts/: build.sh  demo.sh
tests/: config_integration.rs
tests/fixtures/: sample-spec.toml
