[package]
name = "mincage-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Command-line interface for mincage."

[[bin]]
name = "mincage"
path = "src/main.rs"

[dependencies]
mincage-core = { path = "../mincage-core" }
mincage-runtime = { path = "../mincage-runtime" }
clap.workspace = true
toml.workspace = true
anyhow.workspace = true
