[package]
name = "mincage-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Pure container-specification logic for mincage (no syscalls)."

[dependencies]
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
